<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radio_btn_neuerBereich"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inRange" />

        <RadioButton
            android:id="@+id/radio_btn_alterBereich"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currentView" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:gravity="center_vertical"
        android:text="@string/from" />

    <EditText
        android:id="@+id/editFFTMin"
        android:layout_width="44dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to" />

    <EditText
        android:id="@+id/editFFTMax"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal" />

</LinearLayout>