<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  >

<RelativeLayout 
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.mcdax.graphplot.activities.MainActivity" >

    <TextView
        android:id="@+id/eqView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textSize="20sp"
        android:text="@string/function" />

    <GridLayout
        android:id="@+id/GridLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eqView"
        android:layout_below="@+id/eqView"
        android:layout_marginTop="43sp"
        android:columnCount="5"
        android:orientation="vertical"
        android:rowCount="2">

        <Button
            android:id="@+id/btn_sin"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:onClick="onButtonClicked"
            android:text="sin(" />

        <Button
            android:id="@+id/btn_cos"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onButtonClicked"
            android:text="cos(" />

        <Button
            android:id="@+id/btn_tan"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onButtonClicked"
            android:text="tan(" />

        <Button
            android:id="@+id/btn_exp"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onButtonClicked"
            android:text="exp(" />

        <Button
            android:id="@+id/btn_ln"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onButtonClicked"
            android:text="ln(" />

        <Button
            android:id="@+id/btn_Pi"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onButtonClicked"
            android:text="π" />

        <Button
            android:id="@+id/btn_t"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onButtonClicked"
            android:text="t" />

        <Button
            android:id="@+id/btn_openBrackets"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:onClick="onButtonClicked"
            android:text="(" />

        <Button
            android:id="@+id/btn_exponent"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:onClick="onButtonClicked"
            android:text="^" />

        <Button
            android:id="@+id/btn_closeBrackets"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:onClick="onButtonClicked"
            android:text=")" />

    </GridLayout>

    <EditText
        android:id="@+id/input_equation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/GridLayout1"
        android:layout_below="@+id/eqView"
        android:inputType="number"
        android:digits="0123456789t()*+-/.,sincotalexpπ^"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GridLayout1"
        android:layout_marginTop="22dp"
        android:text="@string/samplingrate"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sampleRate"
        android:layout_toRightOf="@+id/sampleRate"
        android:text="@string/hz"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sampleRate"
        android:layout_below="@+id/sampleRate"
        android:layout_marginTop="19dp"
        android:text="@string/startDarstellung"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1" >

        <EditText
            android:id="@+id/lower_limit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="0123456789.,-"
            android:ems="10"
            android:hint="min"
            android:inputType="number|numberSigned|numberDecimal"
            android:maxLines="2" />

        <EditText
            android:id="@+id/upper_limit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="0123456789.,-"
            android:ems="10"
            android:hint="max"
            android:inputType="number|numberSigned|numberDecimal"
            android:maxLines="2" />

    </LinearLayout>

    <EditText
        android:id="@+id/sampleRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:digits="0123456789.,"
        android:ems="10"
        android:inputType="number"
        android:maxLines="1"
        android:singleLine="true" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true" >
	
	    <Button
	        android:id="@+id/btn_1_Ordnung"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/btn_0_Ordnung"
	        android:layout_alignBottom="@+id/btn_0_Ordnung"
	        android:layout_marginTop="14dp"
	        android:layout_toRightOf="@+id/btn_0_Ordnung"
	        android:onClick="startPlot"
	        android:text="@string/sample"
	        android:textSize="20sp" />

	</LinearLayout>
	    
</RelativeLayout>
</ScrollView>